--- a/project/nevil-submission.ipynb
+++ b/project/nevil-submission.ipynb
@@ -125,6 +125,8 @@
     "    df.trip_distance > 0\n",
     "\n",
     "    # TODO: add some logic to filter out what you decide is bad data!\n",
+    "    df.passenger_count > 0,\n",
+    "    df.hour > 0\n",
     "    # TIP: Don't spend too much time on this step for this project though, it practice it is a never-ending process.\n",
     "\n",
     "]\n",
@@ -193,6 +195,20 @@
     "            # Try to complete tasks 2 and 3 with this function doing nothing like it currently is.\n",
     "            # Understand what is happening.\n",
     "            # Revisit task 1 and think about what might go in this function.\n",
+    "            obviously_bad_data_filters = [\n",
+    "\n",
+    "                                        df.fare_amount > 0,         # fare_amount in US Dollars\n",
+    "                                        df.trip_distance <= 100,    # trip_distance in miles\n",
+    "                                        df.trip_distance > 0,\n",
+    "\n",
+    "                                        # TODO: add some logic to filter out what you decide is bad data!\n",
+    "                                        df.passenger_count > 0,\n",
+    "                                        df.hour > 0\n",
+    "                                        # TIP: Don't spend too much time on this step for this project though, it practice it is a never-ending process.\n",
+    "                                    ]\n",
+    "\n",
+    "        for f in obviously_bad_data_filters:\n",
+    "            df = df[f]\n",
     "            \n",
     "        return df\n",
     "\n",
